namespace Vis.Common.Startup;

public enum State
{
    UNSTARTED,
    STARTED,
    WAITING,
    COMPLETE,
    ERROR
}